syntax = "proto3";

package user;

option go_package = "/proto/user";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
}

message Empty{}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
  string bio = 6;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string bio = 6;
  string created_at = 7;
  string updated_at = 8;
}